[package]
name = "udbserver"
version = "0.1.0"
authors = ["Bet4 <0xbet4@gmail.com>"]
description = "Provide Unicorn emulator with a debug server"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "http://github.com/bet4it/udbserver"
categories = ["emulators"]
keywords = ["gdb", "debugging", "emulator"]

[lib]
name = "udbserver"
crate-type = ["lib"]

[features]
capi = []

[dependencies]
gdbstub = "0.6"
singlyton = "4"
unicorn-engine = { git = "https://github.com/bet4it/unicorn", branch="dylib", features = ["dynamic_linkage"] }

[package.metadata.capi.header]
subdirectory = false
generation = false
