[build-system]
requires = ["setuptools", "wheel", "setuptools-rust", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "udbserver"
dynamic = ["version"]
license = { text = "MIT License" }
description = "Python bindings of udbserver"
authors = [{ name = "Bet4", email = "0xbet4@gmail.com" }]
urls = { homepage = "https://github.com/bet4it/udbserver" }
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "unicorn >= 2",
]

[tool.setuptools]
zip-safe  = false

[tool.setuptools_scm]
root = "../.."
