[metadata]
name = udbserver
version = 0.1.0
author = Bet4
author_email = 0xbet4@gmail.com
description = Python bindings of udbserver
url = https://github.com/bet4it/udbserver
license = MIT License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Debuggers

[options]
zip_safe = False
setup_requires = setuptools-rust >= 1
install_requires = unicorn > 2
include_package_data = True
